# padz

./: .cloc  .envrc  .gitignore  .goreleaser.yml  .release-sync-state.yaml  .release-sync.yaml  .shipit.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  PADZ.md  README.md  build.rs  commit_fixes.sh  coverage.html  create_pr.sh  go.mod  go.sum  install.sh  lefthook.yml  pixi.toml  release.toml  run_tests.sh  taskj e.txt
.copier/: copier.yml
.github/: copilot-instructions.md  homebrew-formula.rb.tmpl  pull_request_template.md  render-homebrew-formula.py
.github/workflows/: checks.yml  ci.yml  copilot-review.yml  e2e.yml  publish.yml  release.yml  shipit-release.yml  todo-to-issue.yml
.padz/: data.json  index.json  metadata.json
CHANGELOG/: 1.9.0.md  legacy.md  unreleased-inline-metadata-tests.md  unreleased-presentation-prose-audit.md  unreleased-selector-filter-tests.md  unreleased-semantic-copy-create-outcomes.md  unreleased-semantic-import-outcomes.md  unreleased-semantic-maintenance-outcomes.md  unreleased-semantic-pad-mutation-outcomes.md  unreleased-semantic-tag-outcomes.md  unreleased-semantic-transfer-outcomes.md  unreleased-shipit-release-caller.md  unreleased-standout-7-6.md  unreleased-standout-7-9-integration.md  unreleased-standout-ownership.md  unreleased-structured-output.md  unreleased-test-pyramid.md  unreleased-transfer-module-tests.md
apis/: README.md  padz.lua  padz.py  padz.ts
cmd/padz-completions/: main.go
crates/padz/: Cargo.toml  README.md
crates/padz-cli/: Cargo.toml
crates/padz-cli/src/cli/: commands.rs  render.rs
crates/padz-cli/src/cli/templates/: text_list.tmp
crates/padz/debian/: postinst  prerm
crates/padz/src/: clipboard.rs  init.rs  lib.rs  main.rs
crates/padz/src/cli/: bash.completion.sh  clipboard.rs  commands.rs  complete.rs  editor.rs  env.rs  errors.rs  handlers.rs  input.rs  mod.rs  render.rs  result.rs  setup.rs  styles.rs  templates.rs  views.rs  z-completion.sh
crates/padz/src/cli/templates/: _deleted_help.jinja  _deleted_help.tmp  _layout.jinja  _list_pad_line.jinja  _match_lines.jinja  _match_lines.tmp  _pad_line.jinja  _pad_line.tmp  _peek_content.jinja  _peek_content.tmp  copy.jinja  doctor.jinja  export.jinja  full_pad.jinja  full_pad.tmp  import.jinja  initialization.jinja  list.jinja  list.tmp  messages.jinja  modification_result.jinja  path.jinja  purge.jinja  tag_catalog.jinja  tag_registry.jinja  tagging.jinja  text_list.jinja  text_list.tmp  text_list.tmpl  transfer.jinja  uuid.jinja  view.jinja
crates/padz/src/cli/topics/: scopes.txt
crates/padz/src/commands/: config.rs
crates/padz/src/store/: mod.rs
crates/padz/src/styles/: default.css  default.yaml
crates/padz/tests/: PROCESS_COVERAGE.md  format_e2e.rs  handlers_direct.rs  harness.rs  help_e2e.rs  init_link_e2e.rs  input_precedence_e2e.rs  naked_invocation_e2e.rs  ordering_e2e.rs  presentation_seams.rs  process_smoke_e2e.rs  structured_output_e2e.rs  structured_output_harness.rs  terminal_width_e2e.rs  theme.rs  title_referencing.rs
crates/padz/tests/fixtures/presentation_seams/: modification-pin.json
crates/padz/tests/fixtures/semantic_outcomes/: clone-success.json  complete-mixed.json  copy-multiple.json  copy-nested.json  copy-singleton.json  create-aborted.json  delete-completed-empty.json  doctor-clean.json  edit-content.json  import-partial.json  initialization.json  move-no-op.json  purge-completed.json  reopen-no-op.json  tag-all-already-present.json  tag-assigned.json  tag-catalog-empty.json  tag-catalog-listed.json  tag-catalog-singleton.json  tag-deleted.json  tag-none-present.json  tag-removed.json  tag-renamed.json
crates/padz/tests/support/: mod.rs
crates/padzapp/: Cargo.toml  README.md
crates/padzapp/src/: api.rs  config.rs  editor.rs  error.rs  index.rs  init.rs  lib.rs  model.rs  peek.rs  test_utils.rs  todos.rs
crates/padzapp/src/api/: crud.rs  format.rs  init.rs  mod.rs  selectors.rs  status.rs  tags.rs  test_support.rs  transfer.rs  util.rs
crates/padzapp/src/attributes/: filter.rs  mod.rs  spec.rs  value.rs
crates/padzapp/src/commands/: archive.rs  config.rs  create.rs  delete.rs  doctor.rs  export.rs  get.rs  helpers.rs  import.rs  init.rs  inline_metadata.rs  metadata_apply.rs  metadata_schema.rs  mod.rs  move_pads.rs  paths.rs  pinning.rs  purge.rs  restore.rs  status.rs  tagging.rs  tags.rs  transfer.rs  unarchive.rs  update.rs  uuid.rs  view.rs
crates/padzapp/src/commands/get/: attr_filter.rs  mod.rs  search.rs  selector_filter.rs  status_filter.rs
crates/padzapp/src/commands/helpers/: indexing.rs  mod.rs  nesting.rs  pad_fetching.rs  selector_resolve.rs  tree_search.rs
crates/padzapp/src/commands/io/: export.rs  import.rs  mod.rs
crates/padzapp/src/store/: backend.rs  bucketed.rs  fs.rs  fs_backend.rs  mem_backend.rs  memory.rs  mod.rs  pad_store.rs
crates/padzapp/src/tags/: mod.rs  validation.rs
crates/padzapp/tests/: format_behavior.rs  fs_backend_test.rs  fs_wrapper_test.rs  presentation_contract.rs  title_referencing.rs
docs/: architecture_cli_logic_split.txt  cli_behavior.txt  configuration.txt  content_format.txt  identifiers.txt  ids.txt  padz.txt  presentation-prose-audit.md  release-pipeline.lex  scopes.txt  selectors_and_ranges.txt  standout-upgrading-feedback.md  store.txt  store_architecture.txt  test-isolation.md  tree.txt
lib/: bats-harness.bash
live-tests/: .welcome  .wrapper  .zshrc  base-fixture.sh  demo_flow.sh  example.sh  list-all-scopes.sh  run  run-tests  search_test.sh  smart_create.sh  test_basic.sh  test_bulk_id_resolution.sh  test_complex_deletions.sh  test_consecutive_deletions.sh  test_global_project.sh  test_isolation.sh  test_nested_repo_detection.sh  usage.txt
padz_cli/: Cargo.toml
padz_lib/: Cargo.toml
scripts/: _rust_loc.py  bug-report.sh  build  build-all  ci-publish-crate.sh  gen-completion  gen-manpage  new-release  pre-commit  release  run-live-testing  rust-loc-report  setup-dev-env.sh  test-basic.sh  test-comprehensive.sh  test-restored-features.sh  test-with-cov
src/outstanding/: Cargo.toml  lib.rs
tests/: peek_integration.rs
(+290 files in other folders)
