[package]
name = "padz"
version = "0.9.2"
edition = "2021"
description = "A fast, project-aware scratch pad for the command line"
license = "MIT"
repository = "https://github.com/adebert/padz"
keywords = ["cli", "notes", "scratchpad", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "padz"
path = "src/padz/lib.rs"

[[bin]]
name = "padz"
path = "src/padz/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
console = "0.15"
outstanding = "0.3.5"
outstanding-clap = "0.3.5"
colored = "3.0.0"
directories = "6.0.0"
flate2 = "1.1.5"
once_cell = "1.19"
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
thiserror = "2.0.17"
timeago = "0.4"
unicode-width = "0.2.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.16"
predicates = "3.1.2"

[features]
default = []
test_utils = []
