[package]
name = "padz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast, project-aware scratch pad for the command line"
keywords = ["cli", "notes", "scratchpad", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "padz"
path = "src/main.rs"

[dependencies]
padz = { version = "0.9.5", path = "../padz" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
console = "0.15"
once_cell = "1.19"
outstanding = "0.3.5"
outstanding-clap = "0.3.5"
serde = { version = "1.0.228", features = ["derive"] }
timeago = "0.4"
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
