[package]
name = "padz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An ergonomic, context-aware scratch pad for the terminal — a good Unix citizen"
keywords = ["cli", "notes", "scratchpad", "productivity", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "padz"
path = "src/main.rs"

[dependencies]
padzapp = { version = "0.19.0", path = "../padzapp" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
clapfig = "0.9.2"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
console = "0.15"
directories = "6.0.0"
dark-light = "0.2"
once_cell = "1.19"
standout = "6.1.0"
standout-macros = "6.1.0"
standout-dispatch = "6.1.0"
standout-input = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
unicode-width = "0.2.2"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
