[package]
name = "padz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An ergonomic, context-aware scratch pad for the terminal — a good Unix citizen"
keywords = ["cli", "notes", "scratchpad", "productivity", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

# The CLI's guts (command tree, typed handlers, app builder) live in the library
# target so the test pyramid can drive them in process; `main.rs` is a shim over
# `cli::run()`. See `src/lib.rs` for the layering and the seam each test group owns.
[lib]
name = "padz"
path = "src/lib.rs"

[[bin]]
name = "padz"
path = "src/main.rs"

[dependencies]
padzapp = { version = "1.9.0", path = "../padzapp" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
clapfig = "0.9.2"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
console = "0.15"
directories = "6.0.0"
dark-light = "0.2"
once_cell = "1.19"
standout = "7.9.1"
standout-macros = "7.9.1"
standout-dispatch = "7.9.1"
# Standout's render layer, needed directly for `set_terminal_width_detector`:
# padz installs its own terminal-width policy (read `$COLUMNS`, clamp, pay back
# the ⏲ column) so 7.9.1's `tabular()` width cascade resolves to the width the
# listing templates expect. `standout` re-exports most of this crate but not the
# environment detectors, so it is named here (same reason `minijinja` is).
standout-render = "7.9.1"
# Standout's template engine. Needed directly to type the context providers in
# cli::render, whose values standout hands to MiniJinja.
minijinja = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
terminal_size = "0.4"
unicode-width = "0.2.2"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.10.1"
# Column assertions on rendered text have to count the way a terminal does: the
# status glyph is several `char`s wide and zero-to-two columns wide, so byte or
# char offsets would measure the wrong thing. Same crate the renderer measures
# with, so a test column and a rendered column mean the same number.
unicode-width = "0.2.2"
# Standout's in-process harness: drives the real App from argv through render,
# bundling the injection seams (env, cwd, detectors, stdin, clipboard) behind one
# builder that restores them on drop. Re-exports `serial_test`, which every
# harness test needs: those seams are process-global.
#
# Pinned to the v7.9.1 git tag rather than a crates.io version ON PURPOSE. The
# newest *published* standout-test is 7.5.1, and it does not compile against the
# standout 7.9.1 this crate uses: 7.6 made `RunResult` `#[non_exhaustive]` and
# added the `Error` variant, while 7.5.1 matches `RunResult` exhaustively. Its
# `standout = "^7.5.1"` requirement claims that unification is fine, so Cargo
# resolves it happily and then fails to build — the incompatibility is real but
# invisible to semver. The v7.9.1 tag (matching our standout exactly) handles
# `Error` and matches non-exhaustively; it is unpublished only because the crate
# carries `publish = false` upstream. Tracked at arthur-debert/standout; swap this
# back to a plain version requirement once a compatible release is on crates.io.
#
# Safe for `cargo publish`: a dev-dependency with no `version` key is stripped
# from the packaged manifest, so this git source never reaches consumers.
standout-test = { git = "https://github.com/arthur-debert/standout", tag = "v7.9.1" }
# Direct, even though standout-test re-exports `serial`: the macro it re-exports
# expands to `::serial_test` paths, so the crate has to be nameable here for
# `#[serial]` to resolve. Same major as standout-test's own requirement, so the
# two unify onto one copy of the lock that makes harness tests serial.
serial_test = "3"
# Format-aware parsers for the structured-output contract tests. A string
# `contains` assertion would pass on human text that merely mentions a field, so
# every structured assertion parses the output with a real parser for that format.
# These are ordinary caret requirements, chosen to be semver-compatible with the
# parsers standout serializes with (csv 1.4.x, quick-xml 0.36.x). Cargo unifies
# each onto a single version across the graph, so the tests read back with the
# same crate standout wrote with; Cargo.lock records which version that is.
csv = "1.4"
quick-xml = "0.36"
# The `uuid` handler's contract is "a parseable uuid per selector"; asserting that
# with the real parser beats a hand-rolled shape check that would accept garbage.
uuid = "1.19.0"

# cargo-deb configuration. Driven by `cargo deb -p padz` in CI.
# Completions are generated at install time by the postinst maintainer
# script (it invokes `padz completion --shell X print`) rather than
# shipped as static assets, because clap_complete bakes the absolute
# binary path into the script and we can't know /usr/bin/padz at build
# time for a cross-compiled artifact.
[package.metadata.deb]
maintainer = "Arthur Debert <debert@gmail.com>"
copyright = "2025-2026, Arthur Debert <debert@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """
padz is a scratch-pad / note-taking CLI that adapts to its context.
Notes are scoped to the current project (via .padz/) or globally, with
automatic discovery, todo tracking, tags, archive/restore, and import/
export. Designed as a good Unix citizen: predictable output, pipes
cleanly, and composes with standard tooling.
"""
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
    # cargo-deb rewrites `target/release/` to `target/<triple>/release/`
    # automatically when `--target` is passed (as CI does), so this path
    # works for both native and cross-compiled builds.
    ["target/release/padz", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/padz/README.md", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/padz/CHANGELOG.md", "644"],
]
maintainer-scripts = "debian/"

# CI builds each architecture separately with --target, so cargo-deb
# picks up the binary from target/<triple>/release/. The workspace
# rewrite pattern handles the asset path override.
[package.metadata.deb.variants.amd64]
[package.metadata.deb.variants.arm64]
