[package]
name = "padzapp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An ergonomic, context-aware scratch pad library with plain text storage"
keywords = ["notes", "scratchpad", "productivity", "plaintext"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clapfig = "0.3.0"
confique = { version = "0.4", features = ["toml"] }
directories = "6.0.0"
flate2 = "1.1.5"
once_cell = "1.19"
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
thiserror = "2.0.17"
timeago = "0.4"
toml = "0.8"
unicode-width = "0.2.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = []
test_utils = []
